fix: navbar shift

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,6 +4,17 @@
   --code-border: #e1e4e8;
 }
 
+html {
+  overflow-y: scroll;
+}
+
+@supports (scrollbar-gutter: stable) {
+  html {
+    overflow-y: auto;
+    scrollbar-gutter: stable;
+  }
+}
+
 body.colorscheme-light,
 body[data-theme="light"] {
   --text-primary: #111;
